# attention-in-ai-d12f-claude

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.neurico/: idea.yaml  pipeline_results.json  pipeline_state.json
datasets/: README.md
logs/: execution_claude_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_claude_transcript.jsonl  resource_finder_prompt.txt  session_instructions.txt
paper_draft/: main.tex  references.bib
paper_draft/commands/: macros.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
papers/: README.md
papers/pages/: 1706.03762_attention_is_all_you_need_manifest.txt  2111.07624_attention_cv_survey_manifest.txt  2203.14263_general_attention_survey_manifest.txt
results/: attention_distributions.json  cross_domain_results.json  math_mapping_results.json  pretrained_results.json  statistical_analysis.json
src/: experiment_cross_domain.py  experiment_math_mapping.py  experiment_pretrained.py  statistical_analysis.py  visualization.py
